--- a/src/sass/components/single__page.scss
+++ b/src/sass/components/single__page.scss
@@ -122,6 +122,7 @@
                 border-radius: 4px;
                 border: 2px solid rgb(13, 99, 243);
                 transition: 0.3s ease-in;
+                padding-right: 65px;
             }
         } 
     }
@@ -141,7 +142,6 @@
         background-color: rgb(13, 99, 243);
         color: white;
         border: 2px solid white;
-
       }
   }
 
