--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,9 @@
 @import url("./components/navbar.scss");
 @import url("./components/card.scss");
 @import url("./components/single__page.scss");
+@import url("./components/footer.scss");
+@import url("./components/hero.scss");
+@import url("./pages/login.scss");
 body{
     margin: 0;
     padding: 0;
