--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@ body{
     font-family: "Gothic A1", sans-serif;
     background: rgb(245, 245, 245);
     list-style-type: none;
+    overflow-x: hidden;
     button{
         border: none;
         cursor: pointer;
